src/Components/MessageList.css
.roomsNmessages {
  margin-left: 1.3rem;
  margin-right: 1.8rem;
}

.messageList ul li {
  list-style-type: none;
  line-height: 2rem;
}
.messageList ul {
  margin-top: 4rem;
}

.messageList ul:nth-child(even) {
  background-color: #9ec8e3;
  border-radius: 10px;
  width: 100%;
}

.messageList ul:nth-child(odd) {
  background-color: #8f8daa;
  border-radius: 10px;
  max-width: 100%;
}
.messageList ul:last-child {
  margin-bottom: 10rem;
}

.newMessage {
  display: grid;
  grid-template-columns: 80% 20%;
  align-items: end;
}
.fixed-bottom.messageForm {
  background-color: white;
  padding-top: 10px;
  height: 60px;
  padding-left: 1.2rem;
  padding-right: 1.9rem;
  width: 100%;
}

.messageForm input[type="text"] {
  width: 98%;

  height: 40px;
  box-sizing: border-box;
  border: 4px solid #151a57;

  font-size: 1.2rem;
  border-radius: 10px;
}

.messageForm input[type="submit"] {
  width: 100%;

  height: 40px;
  cursor: pointer;
  margin-bottom: 5px;
  box-sizing: border-box;
  background-color: #0095d5;
  color: white;
  border-radius: 10px;
}

.roomsNmessages {
  padding-top: 115px;
}

.roomsNmessages > h2 {
  color: white;
  background-color: #151a57;

  width: 160px;
  height: 30px;
  padding: 4px;
  padding-top: 2px;

  position: fixed;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
}

.textBubble {
  margin-left: -40px;
  display: grid;
  grid-template-rows: 24px auto;
}

.textBubbleUserDate {
  border-bottom: solid 1px white;
}

.textBubbleUserDate li.bubbleUser {
  justify-self: start;
  padding-left: 8px;
}

.textBubbleUserDate li.bubbleUser h5 {
  font-size: 1.7rem;
  font-weight: 800;
  padding-top: 2px;
}

.textBubbleUserDate li.bubbleDate Moment.bubbleDateWrap h5 {
  font-size: 1.7rem;
  font-weight: 800;
  padding-top: 6px;
}

.textBubbleUserDate li.bubbleDate {
  justify-self: end;
  padding-right: 8px;
}

.bubbleTime {
  font-size: 4rem;
  font-weight: 400;
}

.textBubbleUserDate {
  display: grid;
  grid-template-columns: 50% 50%;
}

.textBubbleContent {
  padding: 8px;
}

@media (max-width: 767.98px) {
  .roomsNmessages {
    position: relative;
    padding-top: 1px;
    margin-top: 1px;
  }

  .roomsNmessages > h2 {
    align-self: start;
    position: relative;
    margin-top: -2.2px;
  }
}

